apps/base/dynacat-k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dynacat-k8s
  labels:
    app.kubernetes.io/name: dynacat-k8s
    app.kubernetes.io/component: dashboard-extension
