apps/base/dynacat-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynacat-k8s
  namespace: dynacat-k8s
  labels:
    app.kubernetes.io/name: dynacat-k8s
    app.kubernetes.io/component: dashboard-extension
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: dynacat-k8s
    app.kubernetes.io/component: dashboard-extension
